DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
May-04-2007 patrick     Added lighting code to vrj::GlBasicSimulator so that
                        OSG and OpenSG application objects do not have to
                        include that code themselves just so that the simulator
                        renders nicely.
                        NEW VERSION: 2.1.25
May-01-2007 patrick     Renamed the x11_pipes property of the display_system
                        config element to pipes.
                        NEW VERSION: 2.1.24
Apr-22-2007 patrick     Application programmers can now choose to use an
                        NSApplication delegate other than VrjMainController.
                        NEW VERSION: 2.1.23
Apr-07-2007 patrick     Made the number of sample buffers and samples per
                        buffer configurable when using multisampling.
                        NEW VERSION: 2.1.22
Apr-05-2007 patrick     Added support for Cocoa windows on Mac OS X.
                        NEW VERSION: 2.1.21
Mar-21-2007 patrick     Instances of vrj::DrawSimInterfaces are now handled
                        internally using boost::shared_ptr<T>.
Mar-21-2007 patrick     The Display Manager now uses vrj::DisplayPtr (a
                        boost::shared_ptr typedef) instead of vrj::Display*.
                        NEW VERSION: 2.1.20
Mar-18-2007 patrick     The OpenGL Draw Manager now uses vrj::GlWindowPtr (a
                        boost::shared_ptr typedef) instead of vrj::GlWindow*.
                        NEW VERSION: 2.1.19
Feb-22-2007 patrick     Added vrj::GlSimInterface::contextInit() so that the
                        contextInit() method in vrj::GlDrawObjectFunctor can
                        be invoked.
                        NEW VERSION: 2.1.18
Feb-21-2007 patrick     Updated for new keys in Gadgeteer 1.1.24.
Jan-30-2007 patrick     Eliminated the need to set VJ_BASE_DIR on Windwos to